crates/macro/tests/html-iterable-fail.stderr
error: expected expression after `for`
 --> $DIR/html-iterable-fail.rs:3:19
  |
3 | test_html! { |t1| for }
  |                   ^^^

error[E0277]: `()` is not an iterator
 --> $DIR/html-iterable-fail.rs:4:23
  |
4 | test_html! { |t2| for () }
  |                       ^^ `()` is not an iterator
  |
  = help: the trait `std::iter::Iterator` is not implemented for `()`
  = note: required for the cast to the object type `dyn std::iter::Iterator<Item=_>`

error[E0277]: `()` is not an iterator
 --> $DIR/html-iterable-fail.rs:5:23
  |
5 | test_html! { |t3| for {()} }
  |                       ^^^^ `()` is not an iterator
  |
  = help: the trait `std::iter::Iterator` is not implemented for `()`
  = note: required for the cast to the object type `dyn std::iter::Iterator<Item=_>`

error[E0308]: mismatched types
 --> $DIR/html-iterable-fail.rs:6:23
  |
6 | test_html! { |t4| for Vec::<()>::new().into_iter() }
  |                       ^^^ expected enum `yew_shared::virtual_dom::vnode::VNode`, found ()
  |
  = note: expected type `yew_shared::virtual_dom::vnode::VNode<_>`
             found type `()`

error[E0308]: mismatched types
  --> $DIR/html-iterable-fail.rs:10:17
   |
10 |     html! { for empty }
   |                 ^^^^^ expected enum `yew_shared::virtual_dom::vnode::VNode`, found ()
   |
   = note: expected type `yew_shared::virtual_dom::vnode::VNode<_>`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/html-iterable-fail.rs:15:17
   |
15 |     html! { for empty.iter() }
   |                 ^^^^^ expected enum `yew_shared::virtual_dom::vnode::VNode`, found &()
   |
   = note: expected type `yew_shared::virtual_dom::vnode::VNode<_>`
              found type `&()`

Some errors occurred: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
